# ComfyUI-Yolo-World-EfficientSAM

./: .gitignore  README.md  YoloWorldEfficientSAM.py  pyproject.toml  requirements.txt
utils/: efficient_sam.py
